# ai-bootcamp

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile.new  OPENAI_SETUP.md  load_env.bat  pyproject.toml  run.ps1  run_with_env.bat  run_with_env_azure.bat
.task/: multi-agent.prd  try-multi-agent.md
configs/: train.yaml
configs/model/: baseline.yaml
docs/: 01.쉘실행  02.서비스요청  03.환경변수
outputs/2025-08-19/17-14-08/.hydra/: hydra.yaml
outputs/2025-08-19/17-15-08/.hydra/: config.yaml  hydra.yaml
src/ai_bootcamp/app/: api.py  cli.py
src/ai_bootcamp/app/common/: __init__.py
src/ai_bootcamp/app/common/business/: __init__.py
src/ai_bootcamp/app/common/transfer/: __init__.py  account_dto.py  auth_dto.py  predict_dto.py
src/ai_bootcamp/app/common/web/: __init__.py  account_controller.py  auth_controller.py  predict_controller.py
src/ai_bootcamp/app/demo/langraph/: langgraph.md
src/ai_bootcamp/app/demo/multiagent/: README.md  basicexam.py  explain.md  multiagent.py  multiagent02.py  trymultiagent.py  trymultiagent2.py  trymultiagent3.py  trymultiagentchat.py  trymultiagentopenai-README.md  trymultiagentopenai.py
src/ai_bootcamp/app/demo/prac01/: __init__.py  chatdemo.py  demo_controller.py
src/ai_bootcamp/app/demo/prac02/: __init__.py  chatimage.py  demo_controller.py  langchain_api_controller.py  langchain_controller.py  langchainchat.py  langgraphex02.py  langgraphex03.py  langraphex.py
src/ai_bootcamp/resources/static/: style.css
src/ai_bootcamp/resources/templates/accounts/: index.html
src/ai_bootcamp/resources/templates/common/: header.html
(+44 files in other folders)
